Fixes role editing modal overflow

--- a/ui/app/styles/main.less
+++ b/ui/app/styles/main.less
@@ -585,6 +585,11 @@ label {
       }
     }
   }
+  .long-content {
+    max-height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
 }
 .modal-footer {
   border: 0;
